Implement simple heartbeat profile detector